<resources>
    <string name="app_name">KCAT Player</string>

    <string name="explore">Explore</string>

    <string name="station_id">Radio KCAT</string>

    <string name="list_title">Explore</string>

    <string name="play_button">play button</string>

    <string name="artist">Blackbear</string>

    <string name="title">Wish You the Best</string>

    <string name="album">Digital Druglord</string>

    <string name="year">2017</string>

    <string name="listen">Listen</string>

    <string name="place_artist">Artist</string>

    <string name="place_title">Title</string>

    <string name="place_album">Album</string>

    <string name="place_year">Year</string>

    <string name="home_question">Ready to Rock?</string>

    <string name="now_playing">Now Playing: </string>

    <string name="home">Home</string>


</resources>
