<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:textStyle="bold"
            android:text="@string/now_playing"
            android:textSize="32sp"/>

        <ImageView
            android:id="@+id/playing_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/artist_text_view"
            android:layout_width="wrap_content"
            android:textColor="@color/kcatBlack"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:text="@string/artist"
            android:textSize="28sp"/>

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:textColor="@color/kcatBlack"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/title"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/album_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/kcatBlack"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/album"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/year_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/year"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="32dp">

            <Button
                android:id="@+id/home_button"
                android:backgroundTint="@color/kcatBlack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/home"
                android:textSize="20sp"
                android:textColor="@color/kcatWhite"
                android:textStyle="bold" />

            <Button
                android:id="@+id/explore_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/explore"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:id="@+id/listen_play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:src="@drawable/whiteplaybutton"
            android:background="@color/kcatBlack"
            android:padding="8dp"
            android:contentDescription="@string/app_name" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>