<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/kcatGray"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/ListStyle"
                android:id="@+id/artist_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/artist" />

            <TextView
                style="@style/ListStyle"
                android:id="@+id/title_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title" />

            <TextView
                style="@style/ListStyle"
                android:id="@+id/album_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/album" />

            <TextView
                style="@style/ListStyle"
                android:id="@+id/year_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:text="@string/year" />

        </LinearLayout>

        <ImageView
            android:id="@+id/play_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:layout_weight="1"
            android:contentDescription="@string/default_image"
            android:src="@mipmap/ic_launcher" />

    </LinearLayout>

</LinearLayout>