<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:textColor="@color/kcatBlack"
            android:text="@string/station_id"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_weight="5"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="3">

            <Button
                android:id="@+id/main_listen_button"
                android:backgroundTint="@color/kcatBlack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/listen"
                android:textSize="20sp"
                android:textColor="@color/kcatWhite"
                android:textStyle="bold" />

            <Button
                android:id="@+id/main_explore_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/explore"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/kcatlogosm"
            android:layout_weight="3"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>